Fixed inputs overflowing parent containers

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -92,7 +92,7 @@ mat-icon {
     }
 
     .field {
-        flex: 1 0 400px;
+        flex: 1 1 400px;
         max-width: 100%;
         margin: 0.25em;
     }
